# rust-samples

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
crates/examples/: Cargo.toml
crates/examples/examples/: ascii_generator.rs  async_basic.rs  scroll.rs
crates/examples/src/: lib.rs
standalone/tauri-app/: .gitignore  COLUMN_FEATURES.md  PRODUCT_LIST_OPTIMIZATION.md  PRODUCT_UPDATE_SUMMARY.md  package.json  pnpm-lock.yaml
standalone/tauri-app/screenshots/: README.md
standalone/tauri-app/src/: main.ts
standalone/tauri-app/src-tauri/: Cargo.toml
standalone/tauri-app/src-tauri/.cargo/: config.toml
standalone/tauri-app/src-tauri/src/: lib.rs
standalone/tauri-app/src/components/: AboutPage.vue  LoginForm.vue  UserInfo.vue
standalone/tauri-app/src/composables/: useBugs.ts  useProducts.ts
tauri-app/: README.md
tauri-app/src/: App.vue
tauri-app/src-tauri/: tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/components/: BugDetail.vue  BugList.vue  ProductList.vue
tauri-app/src/composables/: useUser.ts
tauri-app/src/services/: api.ts
tauri-app/src/types/: index.ts
