[package]
name = "examples"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]

# 这里只放核心/通用依赖，保持最小化

[dev-dependencies]
# examples 用的依赖放这里，按需编译
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
image.workspace = true
gpui.workspace = true
gpui-component.workspace = true
fake.workspace = true
# 如果某个 example 需要特定依赖，可以这样单独指定：
# [[example]]
# name = "ascii_generator"
# required-features = []  # 或者用 feature 控制
#
# 但更简单的是：Cargo 会自动只编译 example 实际 use 的依赖
