[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"], default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], default-features = false }
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
base64 = "0.21"
dirs = "5.0"
regex = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# 优化编译性能
[profile.dev]
# 开发模式下减少优化以加快编译速度
opt-level = 0
debug = true
split-debuginfo = "packed"  # Windows上减少调试信息文件大小
incremental = true

[profile.release]
# 发布模式保持高优化
opt-level = 3
lto = true
panic = "abort"

